--- a/MRPApp/MRPApp/View/Setting/SettingList.xaml
+++ b/MRPApp/MRPApp/View/Setting/SettingList.xaml
@@ -81,7 +81,7 @@
         <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" 
                     Orientation="Horizontal" HorizontalAlignment="Right">
             <Button x:Name="BtnNew" 
-                    Height="50" Width="120" Content="신규" FontSize="14" 
+                    Height="40" Width="90" Content="신규" FontSize="14" 
                     Background="CornflowerBlue"
                     Margin="5, 0" Click="BtnNew_Click" >
                 <Button.ContentTemplate>
@@ -94,7 +94,7 @@
                 </Button.ContentTemplate>
             </Button>
             <Button x:Name="BtnInsert" 
-                    Height="50" Width="120" Content="입력" FontSize="14" 
+                    Height="40" Width="90" Content="입력" FontSize="14" 
                     Background="CornflowerBlue"
                     Margin="5" RenderTransformOrigin="0.5,0.5" Click="BtnInsert_Click" >
                 <Button.ContentTemplate>
@@ -108,12 +108,24 @@
             </Button>
             <Button x:Name="BtnUpdate" 
                     Background="LightSteelBlue"
-                    Height="50" Width="120" Content="수정" FontSize="14" Margin="5" Click="BtnUpdate_Click">
+                    Height="40" Width="90" Content="수정" FontSize="14" Margin="5" Click="BtnUpdate_Click">
                 <Button.ContentTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding}" Margin="5, 0" VerticalAlignment="Center" />
                             <Image Source="/Resources/pencil.png" Width="24" Height="24" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button x:Name="BtnDelete" 
+                    Background="LightSteelBlue"
+                    Height="40" Width="90" Content="삭제" FontSize="14" Margin="5" Click="BtnDelete_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="5, 0" VerticalAlignment="Center" />
+                            <Image Source="/Resources/delete.png" Width="24" Height="24" />
                         </StackPanel>
                     </DataTemplate>
                 </Button.ContentTemplate>
@@ -130,7 +142,7 @@
 
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Label Content="검색어"></Label>
-                <TextBox x:Name="TxtSearch" Width="200" Margin="8"/>
+                <TextBox x:Name="TxtSearch" Width="200" Margin="8" KeyDown="TxtSearch_KeyDown"/>
                 <Button x:Name="BtnSearch" Content="검색" Width="80" 
                         Margin="5" FontSize="14" Background="CornflowerBlue" 
                         Foreground="White" Click="BtnSearch_Click"/>
@@ -145,7 +157,7 @@
                     <DataGridTextColumn Binding="{Binding BasicCode}" Header="코드" Width="100" IsReadOnly="True" />
                     <DataGridTextColumn Binding="{Binding CodeName}" Header="코드명" Width="1*" IsReadOnly="True" />
                     <DataGridTextColumn Binding="{Binding CodeDesc}" Header="코드설명" Width="1*" IsReadOnly="True" />
-                    <DataGridTextColumn Binding="{Binding RegDate}" Header="등록일" Width="1*" IsReadOnly="True" />
+                    <DataGridTextColumn Binding="{Binding RegDate,StringFormat='yyyy-MM-dd HH:mm:ss'}" Header="등록일" Width="1*" IsReadOnly="True" />
                     <DataGridTextColumn Header="" Width="10" IsReadOnly="True" />
                 </DataGrid.Columns>
             </DataGrid>
