--- a/MRPApp/MRPApp/MainWindow.xaml
+++ b/MRPApp/MRPApp/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:MRPApp"
     mc:Ignorable="d"
-    Title="Simplet MRP System" Height="700" Width="1200" 
+    Title="Simple MRP System" Height="700" Width="1200" 
     Icon="/Resources/factory.png"
     ContentRendered="MetroWindow_ContentRendered" Activated="MetroWindow_Activated"
     WindowStartupLocation="CenterScreen">
@@ -33,7 +33,7 @@
                     Grid.Column="0" 
                     Content="공정계획" FontSize="16" 
                     Foreground="White" Background="DodgerBlue"
-                    Margin="5, 10">
+                    Margin="5, 10" Click="BtnSchedule_Click">
                 <Button.ContentTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -48,7 +48,7 @@
                     Grid.Column="1" 
                     Content="공정모니터링" FontSize="16" 
                     Foreground="White" Background="Green"
-                    Margin="5, 10">
+                    Margin="5, 10" Click="BtnMonitoring_Click">
                 <Button.ContentTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -102,10 +102,14 @@
                     </DataTemplate>
                 </Button.ContentTemplate>
             </Button>
-            
+
         </Grid>
         <Grid>
-            <Frame x:Name="ActiveControl" NavigationUIVisibility="Hidden" /> <!-- 화면 전환 -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Frame x:Name="ActiveControl" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2" />
+            <!-- 화면 전환 -->
         </Grid>
     </DockPanel>
 </mah:MetroWindow>
