--- a/MRPApp/MRPApp/View/Process/ProcessView.xaml
+++ b/MRPApp/MRPApp/View/Process/ProcessView.xaml
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:MRPApp.View.Process"
     mc:Ignorable="d" 
     d:DesignHeight="630" d:DesignWidth="1200"
-    Title="ProcessView" Loaded="Page_Loaded">
+    Title="ProcessView" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
     <Page.Resources>
         <Style TargetType="Label">
             <!-- {x:Type Label} -->
@@ -96,6 +96,11 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="130"/>
@@ -109,6 +114,19 @@
             <Label x:Name="LblSchLoadTime" Grid.Row="1" Grid.Column="1" Content="90초" FontSize="20" FontFamily="나눔고딕"></Label>
             <Label Grid.Row="2" Grid.Column="0" Content="계획수량" FontSize="20" FontFamily="나눔고딕"></Label>
             <Label x:Name="LblSchAmount" Grid.Row="2" Grid.Column="1" Content="100개" FontSize="20" FontFamily="나눔고딕"></Label>
+            
+            <Label Grid.Row="3" Grid.Column="0" Content="성공수량" FontSize="20" FontFamily="나눔고딕"></Label>
+            <Label x:Name="LblPrcOKAmount" Grid.Row="3" Grid.Column="1" Content="20개" FontSize="20" FontFamily="나눔고딕"></Label>
+
+            <Label Grid.Row="4" Grid.Column="0" Content="실패수량" FontSize="20" FontFamily="나눔고딕"></Label>
+            <Label x:Name="LblPrcFailAmount" Grid.Row="4" Grid.Column="1" Content="20개" FontSize="20" FontFamily="나눔고딕"></Label>
+
+            <Label Grid.Row="5" Grid.Column="0" Content="성공률" FontSize="20" FontFamily="나눔고딕" Foreground="Blue"></Label>
+            <Label x:Name="LblPrcOKRate" Grid.Row="5" Grid.Column="1" Content="20개" FontSize="20" FontFamily="나눔고딕" Foreground="Blue"></Label>
+
+            <Label Grid.Row="6" Grid.Column="0" Content="실패률" FontSize="20" FontFamily="나눔고딕" Foreground="Red"></Label>
+            <Label x:Name="LblPrcFailRate" Grid.Row="6" Grid.Column="1" Content="20개" FontSize="20" FontFamily="나눔고딕" Foreground="Red"></Label>
+
         </Grid>
         <!--모니터링영역 끝-->
     </Grid>
