--- a/MRPApp/MRPApp/View/Report/ReportView.xaml
+++ b/MRPApp/MRPApp/View/Report/ReportView.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:local="clr-namespace:MRPApp.View.Report"
-    xmlns:oxy="http://oxyplot.org/wpf"
+    xmlns:live="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
     mc:Ignorable="d" 
     d:DesignHeight="630" d:DesignWidth="1200"
     Title="ReportView" Loaded="Page_Loaded">
@@ -62,13 +62,12 @@
             </StackPanel>
             <Grid Grid.Row="1">
                 <!--차트영역 시작-->
-                <oxy:Plot>
-                    <oxy:Plot.Series>
-                        <oxy:ColumnSeries Title="계획수량" FillColor="BlueViolet"/>
-                        <oxy:ColumnSeries Title="성공수량" FillColor="Blue"/>
-                        <oxy:ColumnSeries Title="실패수량" FillColor="Red"/>
-                    </oxy:Plot.Series>
-                </oxy:Plot>
+                <live:CartesianChart 
+                    x:Name="ChtReport"
+                    BorderThickness="2"
+                    LegendLocation="Top" Margin="10">
+                    
+                </live:CartesianChart>
                 <!--차트영역 끝-->
             </Grid>
         </Grid>
